--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <div id="loader"><div class="spinner"></div></div>
 
 <script>
-const SCRIPT_URL = "YOUR_DEPLOYED_WEB_APP_URL"; // Replace with Apps Script Web App URL
+const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwFoCXaitd0DO6obxsE8s4PSEMwD_9c6Zc2c7ol-y55LoOjpH2BOtk_qMdUlLcNE9np/exec";
 const faculties = ["Sandeep Agarwal","Bhanu Dhir","Shekhar Sharma","Anju Gupta","Preeti Goel","Rohit Agarwal","Sunita Rathore"];
 let completedFaculties = [];
 
@@ -222,3 +222,4 @@ document.addEventListener("DOMContentLoaded",()=>showPage(1));
 </script>
 </body>
 </html>
+
